<resources>
    <string name="app_name">Suit Go!</string>
    <string name="text_player">Player</string>
    <string name="text_bot">Bot</string>
    <string name="text_start">Start</string>
    <string name="text_input_name_before_play">Input your name before play the game!</string>
    <string name="text_enter_the_game">Enter the game</string>
    <string name="text_greeting_choose_mode">Hi, %s\nChoose your game mode !</string>
    <string name="player_vs_computer">Player VS Computer</string>
    <string name="player_vs_player">Player VS Player</string>
    <string name="please_enter_your_name">Please enter your name!</string>
    <string name="enter_the_game">Enter the game</string>
    <string name="text_player_win">Player Win!</string>
    <string name="text_computer_win">Computer Win!</string>
    <string name="text_draw">Draw!</string>
    <string name="text_computer">Computer</string>
    <string name="text_welcome_to_the_game">Welcome To The Game</string>
    <string name="player_one_turn">Player 1 Turn !</string>
    <string name="player_two">Player Two</string>
    <string name="text_result">Result:</string>
    <string name="text_error_fill_name">You must fill your name!</string>
    <string name="player_two_turn">Player 2 Turn !</string>
    <string name="player_choose_rock">%s choose Rock</string>
    <string name="player_choose_paper">%s choose Paper</string>
    <string name="player_choose_scissor">%s choose Scissor</string>
    <string name="player_two_choose_rock">Player 2 choose Rock</string>
    <string name="player_two_choose_paper">Player 2 choose Paper</string>
    <string name="player_two_choose_scissor">Player 2 choose Scissor</string>
    <string name="text_or">OR</string>
</resources>