<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            style="@style/Text.24.Grey"
            android:textAlignment="center"
            android:text="@string/text_input_name_before_play" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_16sdp"
            android:hint="@string/text_player"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enter_the_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Button.Blue"
            android:text="@string/text_enter_the_game"
            android:layout_margin="@dimen/_16sdp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>